compiler/tools/fpp-to-cpp/test/top/typed_ports_active/topology.ref.txt
fpp-to-cpp
[ local path prefix ]/fpp-to-cpp/test/top/typed_ports_active/components.fpp:11.11
      x4: string,
          ^
error: symbol FW_FIXED_LENGTH_STRING_SIZE is not defined
note: looking for a constant here
note: the symbol FW_FIXED_LENGTH_STRING_SIZE has an implied use at the point of the error
note: use of a string type with default size requires this definition
